# datafactory

./: .env.example  .gitignore  Makefile  README.md  deploy.sh  docker-compose.override.yml  docker-compose.yml  quickstart.sh  upgrade.sh
services/api/: Dockerfile  alembic.ini  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 0001_init_tables.py  003_add_context_and_feedback.py  004_add_calculation_tables.py  005_add_user_behavior.py  006_add_conversation_summary.py  007_add_ku_relations.py  008_add_frontend_tables.py  009_add_system_configs.py  010_fix_parameter_calculation_tables.py  011_add_interaction_flows.py  011_add_notifications_table.py  012_add_dynamic_interaction_columns.py  013_add_pipeline_ku_columns.py  014_fix_missing_tables.py  015_add_regression_test_tables.py
services/api/app/: auth.py  config.py  db.py  main.py  models.py  schemas.py
services/api/app/api/: auth.py  bd.py  config.py  contribute.py  conversation.py  conversations.py  dedup.py  feedback.py  gateway.py  ingest.py  kg.py  ku.py  llm.py  products.py  recommend.py  regression.py  retrieval.py  review.py  router.py  settings.py  stats.py  storage.py  summary.py  tasks.py  users.py  vision.py
services/api/app/clients/: langfuse_client.py  minio_client.py  opensearch_client.py
services/api/app/models/: __init__.py  config.py  contribution.py  conversation.py  legacy.py  llm.py  regression.py  scenario.py  settings.py  task.py  user.py
services/api/app/services/: auth_service.py  behavior_tracker.py  feedback.py  (+31 more)
services/api/scripts/: seed_configs.py
services/api/tests/: test_integration_services.py
services/pipeline/: Dockerfile  pyproject.toml
services/pipeline/pipeline/: dedup_detector.py  ku_merger.py  llm.py  material_classifier.py  metadata_parser.py  param_patterns.py  tasks.py  utils.py
(+169 files in other folders)
