[project]
name = "ai-data-factory-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.110.0",
  "uvicorn[standard]==0.29.0",
  "pydantic[email]==2.6.4",
  "sqlalchemy==2.0.29",
  "alembic==1.13.1",
  "psycopg2-binary==2.9.9",
  "python-multipart==0.0.9",
  "minio==7.2.5",
  "opensearch-py==2.4.2",
  "httpx==0.25.2",
  "openai>=1.0.0",
  "langfuse==2.14.0",
  "python-jose==3.3.0",
  "passlib==1.7.4",
  "bcrypt==4.0.1",
  "pytest==8.2.0",
  "ruff==0.4.9",
  "neo4j>=5.0.0",
  "redis>=5.0.0"
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]