[project]
name = "adf-pipeline"
version = "0.1.0"
dependencies = [
  "minio==7.2.5",
  "opensearch-py==2.4.2",
  "httpx==0.27.0",
  "pydantic==2.6.4"
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["pipeline*"]